# ruma-zk

./: .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .typos.toml  Cargo.toml  MSC0000-zk-proven-room-joins.md  MSC_ZK_STARK_JOINS.md  Makefile  README.md  RumaLean.lean  demo_algorithm_showdown.sh  lake-manifest.json  lakefile.toml  main.rs
.github/workflows/: ci.yml
RumaLean/: Graph.lean  Kahn.lean  StateRes.lean
ctopology/: Cargo.toml  lake-manifest.json
ctopology/src/: lib.rs
demo/: index.html
demo-unoptimized-guest/: Cargo.toml
demo-unoptimized-guest/src/: lib.rs
demo_unoptimized_guest/src/: lib.rs  main.rs
docs/: topological-reducer-speedup.md  vuln-001-LambdaClass.txt  vuln-002-VeilCash.txt
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml  build.rs
host/src/: lib.rs  main.rs
pure-topological-prover/src/: main.rs
res/: ruma_bootstrap_events.json
ruma-zk/: Cargo.toml
ruma-zk-ctopology/src/: main.rs
ruma-zk-prover/: Cargo.toml
ruma-zk-prover/src/: lib.rs  main.rs
ruma-zk-topair/: Cargo.toml
ruma-zk-topological-air/: Cargo.toml
ruma-zk-topological-air/lean_src/: ctopology.lean
ruma-zk-topological-air/src/: lib.rs  main.rs
ruma-zk-verifier/: Cargo.toml
ruma-zk-verifier/src/: lib.rs
ruma-zk-wasm/: Cargo.toml
ruma-zk-witness/: Cargo.toml
ruma-zk/guest/: Cargo.toml
ruma-zk/guest/src/: lib.rs
ruma-zk/src/: main.rs
ruma_zk_guest/src/: main.rs
ruma_zk_witness/src/: lib.rs
scripts/: fetch_matrix_state.py  generate_massive_data.py  visualize_benchmarks.wls
src/: lib.rs  main.rs
src/circuit/: mod.rs  recursive.rs  state_res.rs
src/guest/: Cargo.toml  main.rs
src/guest-unoptimized/: Cargo.toml
src/host/: Cargo.toml  lean_res.rs  main.rs  setup_circuit.rs  test_analyze.rs  verify.rs
src/pure-plonky3/: Cargo.toml
src/pure-plonky3/src/: main.rs
src/server/: main.rs
src/verifier/: light_client.rs
src/wasm-client/: Cargo.toml
src/wasm-client/src/: lib.rs
src/wasm-client/tests/: web.rs
