[package]
name = "zk-matrix-join"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = "0.3.0"
pasta_curves = "0.5.1" # <-- Our new elliptic curve library
sha2 = "0.10.8"
ed25519-dalek = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[dev-dependencies]
