[workspace]
resolver = "2"
members = ["src/host", "src/guest", "src/guest-unoptimized", "src/wasm-client"]

[patch.crates-io]
sp1-sdk = { git = "https://github.com/gamesguru/sp1.git", branch = "main" }
sp1-verifier = { git = "https://github.com/gamesguru/sp1.git", branch = "main" }
sp1-build = { git = "https://github.com/gamesguru/sp1.git", branch = "main" }
sp1-zkvm = { git = "https://github.com/gamesguru/sp1.git", branch = "main" }
sp1-core-executor = { git = "https://github.com/gamesguru/sp1.git", branch = "main" }
sp1-core-machine = { git = "https://github.com/gamesguru/sp1.git", branch = "main" }
