[package]
name = "zk-matrix-join-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "3.0.0"
ruma-state-res = "0.11.2"
ruma-events = "0.27.12"
ruma-common = { version = "0.12.1", features = ["canonical-json"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = { version = "1.0", features = ["alloc"] }
sha2 = "0.10.8"
