[package]
name = "zk-matrix-pure-plonky3"
version = "0.1.0"
edition = "2021"

[dependencies]
slop-air = { path = "../../sp1/slop/crates/air" }
slop-algebra = { path = "../../sp1/slop/crates/algebra" }
slop-matrix = { path = "../../sp1/slop/crates/matrix" }
slop-baby-bear = { path = "../../sp1/slop/crates/baby-bear" }
slop-challenger = { path = "../../sp1/slop/crates/challenger" }
slop-commit = { path = "../../sp1/slop/crates/commit" }
slop-uni-stark = { path = "../../sp1/slop/crates/uni-stark" }
slop-tensor = { path = "../../sp1/slop/crates/tensor" }
slop-dft = { path = "../../sp1/slop/crates/dft" }
slop-fri = { path = "../../sp1/slop/crates/fri" }
slop-multilinear = { path = "../../sp1/slop/crates/multilinear" }
rand = "0.8.5"
blake3 = "1.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
memmap2 = "0.9.10"
